// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailAdressenStandplaats should render \`Nee\` if aanduiding in onderzoek is \`false\` and show a red bullet 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Standplaats label"
  title="Standplaats"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultStatusItem
      label="Indicatie geconstateerd"
      status="alert"
      value="Ja"
    />
    <MapDetailResultItem
      label="Status"
      value="description"
    />
    <MapDetailResultStatusItem
      label="Aanduiding in onderzoek"
      status=""
      value="Nee"
    />
  </ul>
</MapDetailResultWrapper>
`;

exports[`MapDetailAdressenStandplaats should render \`Nee\` if indicatie geconstateerd is \`false\` and show a red bullet 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Standplaats label"
  title="Standplaats"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultStatusItem
      label="Indicatie geconstateerd"
      status=""
      value="Nee"
    />
    <MapDetailResultItem
      label="Status"
      value="description"
    />
    <MapDetailResultStatusItem
      label="Aanduiding in onderzoek"
      status="alert"
      value="Ja"
    />
  </ul>
</MapDetailResultWrapper>
`;

exports[`MapDetailAdressenStandplaats should render everything 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Standplaats label"
  title="Standplaats"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultStatusItem
      label="Indicatie geconstateerd"
      status="alert"
      value="Ja"
    />
    <MapDetailResultItem
      label="Status"
      value="description"
    />
    <MapDetailResultStatusItem
      label="Aanduiding in onderzoek"
      status="alert"
      value="Ja"
    />
  </ul>
</MapDetailResultWrapper>
`;
